Refactoring to match best practices

--- a/grocer/templates/index.html
+++ b/grocer/templates/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Grocer</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}Grocer{% endblock %}
 
+{% block page_content %}
+{% endblock %}
