--- a/grocer/templates/base.html
+++ b/grocer/templates/base.html
@@ -12,7 +12,7 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle Navigation</span>
-                <span class="icon-bar">
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ url_for('core.index') }}">Grocer</a>
         </div>
